--- a/src/styles/positions.scss
+++ b/src/styles/positions.scss
@@ -3,6 +3,7 @@
     width: 100%;
     overflow: hidden;
 }
+
 .mainContentPageTvMovie {
     position:relative;
     top: 0;
@@ -44,27 +45,50 @@
     z-index: 1;
 }
 
+.titleTvMovieContener {
+    position: absolute;
+    width:100%;
+    top: 0;
+    height: 150px;
+    margin-left: 3.4716981132075%;
+    z-index:3;
+}
+
+.titleTvMovies{
+    height:166px;
+    line-height: 166px;
+}
+
 .infoPoster {
     position:relative;
     width:auto;
 }
-.posterContent {
+.posterContentTvMovie {
     position: relative;
     margin-top: -245px;
-    margin-left: 92px;
+    margin-left: 3.4716981132075%;
     z-index: 2;
     max-width: 265px;
+    padding: 0 !important;
 }
 
-.posterImg {
+.posterImgTvMovie {
+    position:relative;
     max-width:100%;
 }
 
 .contentTvMovieInfo {
-    position:absolute;
-    top: 0;
+    position: relative;
+    top: -110px;
+    left : 265px;
+    margin-left: 3.4716981132075%;
+    margin-right : 3.4716981132075%;
     z-index: 2;
-    width:auto;
+    width:auto !important;
+    float: left;
+    width: 60%;
+    margin-top: -225px;
+    padding-left: 3.267973856209%;
 }
 
 .titleTvMovie {
@@ -93,12 +117,13 @@
     text-align: left;
     width:50px;
     margin-top: 50px;
-    margin-bottom: 25px;
+    padding-bottom: 50px;
 }
 
 .castings {
     position : relative;
-    margin-top: 80px;
+    margin-top: 45px;
+    margin-right:40px;
 }
 
 .castBy {
@@ -106,10 +131,10 @@
     margin-right: 15px;
 }
 
-.castByActor {
+.castActor {
     position: absolute;
     left : 110px;
-    width: 850px;
+    width: 163%
 }
 
 .castByResult {
@@ -134,15 +159,15 @@
     display:inline-block;
 }
 
-.contentTvMovie {
-    width: 100%;
-    position: relative;
-    padding-left: 95px;
-    padding-right:95px;
+.contentSynopsisTvMovie {
+    width: 80%;
+    margin: 25px;
+
 }
 .synopsisFont {
     margin-top: 25px;
     margin-bottom: 25px;
+    
 }
 
 .resumeTvMovie {
@@ -173,13 +198,14 @@
     background-color: #2d2d2d;
 }
 
-.separatorSeason {
+.separatorsSeason {
     margin: 0;
     margin-top: 15px;
     margin-bottom: 15px;
     color: $secondaryColor;
     border-color: $secondaryColor;
     height:2,5px;
+    width:95%;
 
 }
 
@@ -210,8 +236,6 @@ a.selected{
     color:#000;
 }
 
-#cbp-spmenu-s1{
-    width:235px;
-}
+
 
 
