--- a/src/styles/colorFont.scss
+++ b/src/styles/colorFont.scss
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto:700italic,300,700,500italic,400);
+@import url(http://fonts.googleapis.com/css?family=Roboto:700italic,300,700,800,500italic,400);
 
 $backgroundColor: #17181b;
 $primaryColor: #fff;
@@ -58,8 +58,15 @@ h4 {
     font-size:1.9em;
 }
 
+
+.titleTvMovies {
+    font-weight: 800;
+    font-size: 2.1em;   
+}
+
 .seasonFont {
     color: $secondaryColor;
+    font-size: 3em;
 }
 
 .seasonNumberFont {
