inté movie serie

--- a/src/movies/views/movies.html
+++ b/src/movies/views/movies.html
@@ -34,8 +34,10 @@
                 </div>
                 <br/><br/><br/><br/>
                 <div class="user">
-                    <img class="user-img" src="images/placeholder.png"/>
-                    <div class="user-name">User Name</div>
+                    <a href="#/profil">
+                        <img class="user-img" src="images/placeholder.png"/>
+                        <div class="user-name">User Name</div>
+                    </a>
                 </div>
             </nav>
             <!-- Fin menu à gauche qui slide -->
@@ -231,8 +233,8 @@
         </div>
     </div>
   
-
-    </div>
 <button class="btn btn-primary" ng-click="showMoreMovies(page)" style="margin:0 auto"> Voir plus de films ! </button>
+    </div>
+
 </div>
   
