--- a/src/movies/views/movie.html
+++ b/src/movies/views/movie.html
@@ -26,6 +26,11 @@
         </div>
 
     </div> 
+
+    <!-- <div class="topbar-phone">
+        <img id="showLeft" src="images/burger-menu.png" class="burger-menu"/>
+        <img src="images/logo-netmedia-ok.png" class="logo-phone"/>
+    </div> -->
         
     <div class="mainContentPageTvMovie">
          
