--- a/src/movies/views/profil.html
+++ b/src/movies/views/profil.html
@@ -10,13 +10,14 @@
 		<title>NetMadia - Votre profil</title>
 
 	</head>
+	
 	<body>
 
       <section class="sidebar">
 
         <div class="user-pic"></div>
 
-        <h3 class="user-name-profil">user-name</h3>
+        <h3 class="user-name-profil"></h3>
 
         <hr></hr>
 
