--- a/src/movies/views/serie.html
+++ b/src/movies/views/serie.html
@@ -5,8 +5,6 @@
         <div class="cbp-spmenu-push">
         
             <nav class="cbp-spmenu cbp-spmenu-vertical" id="cbp-spmenu-s1" >
-                
-                <img id="showLeft" src="images/burger-menu.png"/ class="burger-menu"/>
 
                 <img src="images/logo-netmedia-ok.png" class="logo-accueil"/>
 
@@ -33,6 +31,10 @@
     </div>
 
 </div> 
+<!-- <div class="topbar-phone">
+    <img id="showLeft" src="images/burger-menu.png" class="burger-menu"/>
+    <img src="images/logo-netmedia-ok.png" class="logo-phone"/>
+</div> -->
 
 <div class="mainContentPageTvMovie">
 
@@ -88,7 +90,7 @@
 
     </div>
 
-    <div class="">
+    <div class="userActionMovie clearfix userActionSerie">
                 <a href = "#"><div class="favoriteAdd fontRegular">Ajouter aux favoris</div></a>
                 <a href = "#"><div class="reloadMovie fontRegular">Reprendre la lecture</div></a>
     </div>
