--- a/src/movies/views/profil.html
+++ b/src/movies/views/profil.html
@@ -16,7 +16,7 @@
 
         <div class="user-pic"></div>
 
-        <h3 class="user-name-profil">user-name</h3>
+        <h3 class="user-name-profil">{{user}}</h3>
 
         <hr></hr>
 
