commit 'login', localstorage object user modified

--- a/src/movies/views/profil.html
+++ b/src/movies/views/profil.html
@@ -16,7 +16,11 @@
 
         <div class="user-pic"></div>
 
-        <h3 class="user-name-profil">{{user}}</h3>
+        <h3 class="user-name-profil">{{user.name}}</h3><br>
+       
+        <h3 class="user-name-profil">{{user.email}}</h3><br>
+        <h3 class="user-name-profil">{{user.bithday}}</h3><br>
+        <h3 class="user-name-profil">{{user.gender}}</h3><br>
 
         <hr></hr>
 
