test image null ng-if

--- a/src/movies/views/series.html
+++ b/src/movies/views/series.html
@@ -12,7 +12,7 @@
                 <div class="filters filters-menu-left">
                     <label class="genre">Trier par : </label>
                     <select
-                            ng-change="category(value,1)" 
+                            ng-change="category(value,1)"
                             ng-model="value"
                             ng-options="key as value for (key, value) in categories"
                         >
@@ -32,14 +32,14 @@
                 </div>
             </nav>
         </div>
-    </div> 
+    </div>
 
 
     <div ng-if="series.total_results==0"> Aucun série n'a été trouvé lors de votre recherche</div>
-    
+
     <div class="panel-body">
 
-       
+
     <div  ng-repeat="serie in series.results" class="movie-block">
         <div class="col-sm-6 col-md-4" >
             <div class="pull-right" ng-switch on="movie.status">
@@ -48,13 +48,15 @@
                 <span ng-switch-when="2" class="label label-danger">Blessé(e)</span>
             </div>
             <div class="thumbnail">
-                <img src="http://image.tmdb.org/t/p/w500{{serie.poster_path}}" class="image-thumbnail" ng-click="showSerie(serie.id)">
+                <img ng-if="serie.poster_path!=null" src="http://image.tmdb.org/t/p/w500{{serie.poster_path}}" class="image-thumbnail" ng-click="showSerie(serie.id)">
+                <img ng-if="serie.poster_path==null" src="http://image.eiga.k-img.com/images/buzz/29346/darthvader.jp" class="image-thumbnail" ng-click="showSerie(serie.id)">
+
                 <!-- <img src="http://image.tmdb.org/t/p/w500{{serie.backdrop_path}}" class="image-thumbnail">   -->
                 <div class="caption">
                     <h2 class="title-home">{{serie.name | limitTo:20}}</h2>
                     <!-- <p>original_name : {{serie.original_name}}</p>
-                    <p>id : {{serie.id}}</p>  -->                  
-                    <h4 class"title-details">{{serie.first_air_date | limitTo:4}}</h4>               
+                    <p>id : {{serie.id}}</p>  -->
+                    <h4 class"title-details">{{serie.first_air_date | limitTo:4}}</h4>
                     <!-- <p>first_air_date : {{serie.first_air_date}}</p>
                     <p>origin_country : {{serie.origin_country}}</p>
                     <p>popularity : {{serie.popularity}}</p>
@@ -63,8 +65,8 @@
                     <!-- <button class="btn btn-primary" ng-click="showSerie(serie.id)">Regarder</button> -->
                 </div>
             </div>
-        </div>    
-    </div>   
+        </div>
+    </div>
 
     <div ng-repeat="series in series.more">
         <div  ng-repeat="serie in series" class="movie-block">
@@ -81,8 +83,8 @@
                    <h2 class="title-home">{{serie.name | limitTo:20}}</h2>
                     <!-- <h3>name : {{serie.name}}</h3>
                     <p>original_name : {{serie.original_name}}</p>
-                    <p>id : {{serie.id}}</p>   -->   
-                    <h4 class"title-details">{{serie.first_air_date | limitTo:4}}</h4>                
+                    <p>id : {{serie.id}}</p>   -->
+                    <h4 class"title-details">{{serie.first_air_date | limitTo:4}}</h4>
                     <!-- <p>first_air_date : {{serie.first_air_date}}</p>
                     <p>origin_country : {{serie.origin_country}}</p>
                     <p>popularity : {{serie.popularity}}</p>
@@ -104,4 +106,3 @@
     </div>
 
 </div>
-
