test image null ng-if

--- a/src/movies/views/series.html
+++ b/src/movies/views/series.html
@@ -49,7 +49,7 @@
             </div>
             <div class="thumbnail">
                 <img ng-if="serie.poster_path!=null" src="http://image.tmdb.org/t/p/w500{{serie.poster_path}}" class="image-thumbnail" ng-click="showSerie(serie.id)">
-                <img ng-if="serie.poster_path==null" src="http://image.eiga.k-img.com/images/buzz/29346/darthvader.jp" class="image-thumbnail" ng-click="showSerie(serie.id)">
+                <img ng-if="serie.poster_path==null" src="http://image.eiga.k-img.com/images/buzz/29346/darthvader.jpg" class="image-thumbnail" ng-click="showSerie(serie.id)">
 
                 <!-- <img src="http://image.tmdb.org/t/p/w500{{serie.backdrop_path}}" class="image-thumbnail">   -->
                 <div class="caption">
